<resources>
    <string name="app_name">Modulist</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main">Modulist</string>
    <!-- Menu, drawer -->
    <string name="menu_drawer_settings">Settings</string>
    <string name="menu_drawer_my_lists">My lists</string>
    <string name="menu_drawer_weather_planner">Weather Planner</string>
    <string name="menu_drawer_video_tutorials">Tutorials</string>

    <!-- Menu, theme-->
    <string name="menu_theme_default">Default</string>
    <string name="menu_theme_fruit">Fruit</string>
    <string name="menu_theme_cabin">Cabin</string>

    <!-- Menu, modulist -->
    <string name="go_to_attic_mode">Toggle attic-mode</string>
    <string name="menu_modulist_share">Share list</string>
    <string name="menu_modulist_add_location_reminder">Add location reminder</string>
    <string name="menu_modulist_add_to_calendar">Add to calendar</string>
    <string name="menu_modulist_edit_list">Edit list</string>
    <string name="menu_modulist_update_name">Update name</string>
    <string name="menu_modulist_update_parents">Update parents</string>
    <string name="menu_modulist_update_color">Update color</string>
    <string name="menu_modulist_delete">Delete list</string>

    <!-- Other -->
    <string name="unloaded">Unloaded</string>
    <string name="db_name">modulist_db</string>

    <string name="load_demo_data">Load Demo Data</string>
    <string name="change_theme">Change Theme</string>

    <!-- Preferences -->
    <string name="preferences_modulist_key">preferences_modulist</string>
    <string name="theme_key">theme_key</string>
    <string name="extra_modulelist_key">extra_modulelist_key</string>

    <!-- Intent bundle-keys -->
    <string name="add_fence_lat_key">add_fence_lat_key</string>
    <string name="add_fence_long_key">add_fence_long_key</string>


    <!-- Dialogs -->
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">NO</string>
    <string name="dialog_negative_serious">Go back to safety!</string>
    <string name="dialog_positive_serious">I am sure.</string>
    <string name="dialog_delete_item">This will delete the item from all child-lists as well</string>
    <string name="dialog_clear_data">Clear all data</string>
    <string name="dialog_select_theme">Select your new selectedTheme</string>
    <string name="dialog_camera_permission_title">Usage of camera</string>
    <string name="dialog_camera_permission_message">The camera-flash is only used as a flashlight.</string>
    <string name="dialog_update_parents">Select parents</string>
    <string name="dialog_update_name">Enter new name</string>
    <string name="dialog_delete_module_list">This will delete the list PERMANENTLY.</string>
    <string name="dialog_add_module_list">Add a list called..</string>
    <string name="dialog_add_item_name">Add an item called...</string>
    <string name="dialog_add_item_day_distribution">Pack one for every ... days</string>
    <string name="dialog_add_item_day_final_message">"Name: %1$s \n Distribution: %2$s"</string>
    <string name="dialog_add_item_day_just_the_one">Pack just the one</string>
    <string name="dialog_add_item_okay_question">Does this look okay?</string>
    <string name="dialog_add_demo_data_title">Insert demo data</string>
    <string name="dialog_add_demo_data_message">Demo data will permanently REPLACE your data</string>


    <!-- Permission dialogs -->
    <string name="permission_location_title">Please allow location access.</string>

    <!-- Snackbar text -->
    <string name="snackbar_location_reminder">Added reminder at: %1$s</string>
    <string name="snackbar_sensor_it_is_dark">It is dark. Flashlight is on.</string>
    <string name="snackbar_sensor_turn_light_off">Turn off.</string>
    <string name="snackbar_sensor_lacking_access">This application does not have access to your camera</string>
    <string name="snackbar_sensor_allow_access">Allow camera usage</string>
    <string name="snackbar_sensor_it_is_cold">It is cold. Maybe grab a jumper while you are at it?</string>
    <string name="snackbar_sensor_cold_positive">Good idea!</string>
    <string name="snackbar_error">Some error occured</string>

    <!-- intents -->
    <string name="intent_calendar_title">Pack for %1$s</string>
    <string name="intent_sharing_title">Share list using..</string>

    <!-- GUI in ModuleListActivity -->
    <string name="packing_for_count">Packing for %1$d days</string>


    <string-array name="theme_options">

        <item>
            @string/menu_theme_default
        </item>
        <item>
            @string/menu_theme_fruit
        </item>
        <item>
            @string/menu_theme_cabin
        </item>


    </string-array>

    <string-array name="day_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>8</item>
        <item>13</item>
        <item>21</item>
        <item>34</item>
        <item>Always pack one.</item>
    </string-array>



</resources>
