<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_modulist_add_location_reminder"
            android:title="@string/menu_modulist_add_location_reminder"/>
    <item
        android:id="@+id/menu_modulist_share"
        android:title="@string/menu_modulist_share"/>
    <item
            android:id="@+id/menu_modulist_add_to_calendar"
            android:title="@string/menu_modulist_add_to_calendar"/>
    <item android:title="@string/menu_modulist_edit_list">
        <menu>
            <item
                    android:id="@+id/menu_modulist_update_title"
                    android:title="@string/menu_modulist_update_title" />
            <item
                    android:id="@+id/menu_modulist_update_parents"
                    android:title="@string/menu_modulist_update_parents" />
            <item
                android:id="@+id/menu_modulist_update_color"
                android:title="@string/menu_modulist_update_color" />
            <item
                    android:id="@+id/menu_modulist_delete"
                    android:title="@string/menu_modulist_delete" />
        </menu>
    </item>
</menu>