<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_my_lists"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_drawer_my_lists"/>
        <item
                android:id="@+id/nav_weather_planner"
                android:icon="@android:drawable/ic_popup_sync"
                android:title="@string/menu_drawer_weather_planner"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_drawer_settings"/>
    </group>
</menu>
